make sure shortcuts are always visible

--- a/static/native.css
+++ b/static/native.css
@@ -39,7 +39,13 @@ html, body {
 	top: 0;
 	left: 0;
 }
+.bbt_shortcuts_placeholder {
+	width: 10em;
+}
 @media (max-width: 1000px) {
+	.bbt_shortcuts_placeholder {
+		width: auto;
+	}
 	.bbt_shortcuts {
 		position: static;
 	}
@@ -51,11 +57,15 @@ html, body {
 	}
 }
 @media (min-width: 1001px) and (max-width: 1700px) {
-	.bbt_shortcuts {
-		position: static;
-	}
 	.bbt_root {
 		display: -webkit-flex;
 		display: flex;
+	}
+
+	.bbt_shortcuts_placeholder {
+		width: 18em;
+	}
+	.bbt_shortcuts {
+		position: fixed;
 	}
 }
